Styles/main.css
@font-face {
    font-family: 'arcadeclassicregular';
    src: url('./fonts/arcadeclassic-webfont.woff2') format('woff2'),
         url('./fonts/arcadeclassic-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'virtual_logoregular';
    src: url('./fonts/virtual_logo-webfont.woff2') format('woff2'),
         url('./fonts/virtual_logo-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'ds_bios';
    src: url('./fonts/nintendo-ds-bios-webfont.woff2') format('woff2'),
         url('./fonts/nintendo-ds-bios-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'retro_gaming';
    src: url('./fonts/retro_gaming-webfont.woff2') format('woff2'),
         url('./fonts/retro_gaming-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
body {
    position: static;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    background: #000;
    transform-style: preserve-3d;
    perspective: 1000px;
    overflow: hidden;
}
.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 50;
    width: 20vw;
    z-index: 1;
}

/* menu navbar */

/* background image of the menu */
.navigation-image {
    position: fixed;
    display: block;
    transform-origin: left center;
    width: 275px;
    top: 50%;
    left: 3vw; 
    transform: translate(0, -50%) rotateY(40deg);
}
/* menu list */
.navigation-box {
    position: fixed;
    display: block;
    width: 250px;
    top: 50%;
    left: 3vw;
    transform: translate(0, -50%) rotateY(40deg);
    padding-left: 15px; 
    padding-bottom: 25px;
    transform-origin: left center;
}
.navigation-box ul {
    padding-left: 15px;
}
.navigation-box li {
    margin: 10px 0;
    list-style-type: none;
}
/* this adds blink animation and finger at hover */
.navigation-box li:hover {
    list-style-image: url('./images/indicator.png');
    list-style-position: inside;
    /* margin-left: 15px; */
    animation: blink-animation .6s steps(2, start) infinite;
}
.navigation-box a {
    font-family: 'arcadeclassicregular';
    font-size: 35;
    color: #FF0000;
    text-decoration: none;
}

@keyframes blink-animation {
    0% {
        opacity: 1;
    }
    
    49% {
        opacity: 1;
    }
    
    50% {
        opacity: 0;
    }

    100% {
        opacity: 0;
    }
}
/* grid animation */

.top {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    background-size: 50px 50px;
    background-image: linear-gradient(0deg, transparent 69%, #FF0000 74%,#FF0000 75%,#FF0000 76%, #FF0000 77%, transparent 82%, transparent), linear-gradient(90deg, transparent 69%, #FF0000 74%,#FF0000 75%,#FF0000 76%, #FF0000 77%, transparent 82%, transparent);
    transform: rotateX(-80deg) scale(2);
    transform-origin: top center;
    box-shadow: inset 0px -50vh 40vmin 40vmin #000;
    animation: rad 2s reverse linear infinite;
}
.bottom {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    background-size: 50px 50px;
    background-image: linear-gradient(0deg, transparent 69%, #FF0000 74%, #FF0000 75%, #FF0000 76%, #FF0000 77%, transparent 82%, transparent), linear-gradient(90deg, transparent 69%, #FF0000 74%, #FF0000 75%, #FF0000 76%, #FF0000 77%, transparent 82%, transparent);
    transform: rotateX(80deg) scale(2);
    transform-origin: bottom center;
    box-shadow: inset 0px 50vh 40vmin 40vmin #000;
    animation: rad 2s linear infinite;
}
@keyframes rad {
    100% {
        background-position: 0px 50px;
   }
}

/* media queries */

@media only screen and (max-height: 700px) {
    .navigation-box {
    transform: translate(0, -50%) rotateY(40deg) scale(0.65, 0.65);
   
    }
    .navigation-image {
    transform: translate(0, -50%) rotateY(40deg) scale(0.65, 0.65);
    }
}

.main-content {
    position: fixed;
    display: block;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 70%;
    height: 60%;
    /* border: red;
    border-style: double; */
    /* border-width: 10px; */
    transform: translate(30%, 45%);
    transform-origin: top;
    background-color: black;
    overflow: scroll;
}
::-webkit-scrollbar {
    display: none;
}
.player:hover{
    transform: scale(1.02);
    border-color: red;
    border-style: dotted;
    border-width: 5px;
    animation: border-blink .6s steps(2, start) infinite;
}
@keyframes border-blink {
    0% {
        border-color: black;
        
    }
    49% {
        border-color: black;
       
    }
    50% {
        border-color: red;
        
    }
    100% {
        border-color: red;
        
    }
}
.credits {
    position: relative;
    text-align: center;
    height: 100%;

}
.character-select {
    position: relative;
    margin: 1%;
    color: red;
    font-family: 'retro_gaming';
    width: 100%;
    height: auto;

}
.player {
    position: relative;
    /* float: left; */
    height: 50%;
    width: 20%;
    margin: 1%;
    float: left;
}
.player-img {
    position: relative;
}
.player-info {
    position: relative;
    font-size: 40px;
}
.credits h1{
    font-size: 30px;
}
.credits {
    position: relative;
    color: red;
    margin: 2%;
    font-family: 'ds_bios';
    text-align: center;
    height: 50%;
}

